fixed linkedin link, added stroke to header, z-index on svg

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -20,3 +20,7 @@ footer.page-footer {
   a:hover{
     color: #4db6ac;
 }
+
+div.footer-copyright {
+  background-color: #4a148c;
+}
