--- a/client/src/components/Hero/hero.css
+++ b/client/src/components/Hero/hero.css
@@ -34,11 +34,12 @@
 
 .hero-title > h2 {
     color: #ffffff;
-    font-size: 7rem;
+    font-size: 9rem;
     letter-spacing: 2px;
     margin-top: 0;
     margin-bottom: 30px;
     font-family: 'Mr Dafoe', cursive;
+    -webkit-text-stroke: .3px black;
     transform: rotate(-9deg);
     -ms-transform: rotate(-20deg);
 }
@@ -95,6 +96,7 @@
     top: 64vh; 
     width: 100%;
     height: 20%;
+    z-index: 5;
 }
 
 .svg--sm{
