--- a/client/src/pages/Projects.css
+++ b/client/src/pages/Projects.css
@@ -50,9 +50,10 @@
 }
 
 .projects-header > h1 {
- margin-top: 0;
- margin-bottom: 60px;
- font-family: 'Mr Dafoe', cursive;
- font-size: 7rem;
- letter-spacing: 3px;
+    margin-top: 0;
+    margin-bottom: 60px;
+    font-family: 'Mr Dafoe', cursive;
+    font-size: 9rem;
+    letter-spacing: 3px;
+    -webkit-text-stroke: 1px black;
 }
